start updating for 2023

--- a/INTRO.html
+++ b/INTRO.html
@@ -13,7 +13,7 @@
 
 <title>Intro to NRES 470/670</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -63,6 +63,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -83,6 +84,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -308,7 +312,7 @@ div.tocify {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -324,7 +328,7 @@ div.tocify {
   <a href="schedule.html">Schedule</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Lectures
      
     <span class="caret"></span>
@@ -399,7 +403,7 @@ div.tocify {
   </ul>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Labs
      
     <span class="caret"></span>
@@ -457,54 +461,108 @@ div.tocify {
 <p><img src="prairie_dogs2.jpg" /></p>
 <div id="summary" class="section level2">
 <h2>Summary</h2>
-<p>In this class we will explore how the concepts of <em>population ecology</em> can be applied to real-world systems to support and improve wildlife conservation and management. To take this course you should already have a basic grounding in the field of ecology (e.g., BIOL 314, NRES 217) and you should already have taken Dr. Stewart’s class in wildlife ecology and management (NRES 310). NRES 470 is meant to be a bridge between NRES 310 and NRES 488 (Dynamics and Management of Wildlife Populations), which covers fitting population models to data in R. This class is also closely allied with NRES 421 (Conservation Biology), in that we learn and apply one of the most important tools used by conservation biologists and wildlife managers – population models!</p>
+<p>In this class we will explore key concepts of <em>population
+ecology</em> and how these concepts can be applied to real-world systems
+to support and improve wildlife conservation and management. To take
+this course you should already have a basic grounding in the field of
+ecology (e.g., BIOL 314, NRES 217) and you should already have taken
+Wildlife Ecology and Management (NRES 310). NRES 470/670 is meant to be
+a bridge between NRES 310 and NRES 488 (Dynamics and Management of
+Wildlife Populations), in which you will learn to fit wildlife
+population models to data in R. This class is also closely allied with
+NRES 421 (Conservation Biology), in that we learn and apply one of the
+most important tools used by conservation biologists and wildlife
+managers – population simulation models!</p>
 </div>
 <div id="syllabus" class="section level2">
 <h2>Syllabus:</h2>
 <p>First let’s take a quick walk through the online syllabus:</p>
 <p><a href="index.html">Go to syllabus</a><br />
 <a href="schedule.html">Go to schedule</a></p>
-<p>NOTE: you can download a printable PDF version of the syllabus <a href="Syllabus.pdf">here</a></p>
+<p>NOTE: you can download a printable PDF version of the syllabus <a
+href="Syllabus.pdf">here</a></p>
 </div>
 <div id="textbook" class="section level2">
 <h2>Textbook</h2>
-<p>I have provided PDF copies of all chapters of the course textbook (A Primer of Ecology, by Nick Gotelli) on WebCampus. However, I encourage you to pick up a copy of the textbook- you can purchase the textbook new or used on <a href="https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1484867155&amp;sr=1-1&amp;keywords=a+primer+of+ecology">Amazon</a>. Previous editions (especially 3rd edition) are acceptable as well. All other readings will be posted on <a href="https://unr.instructure.com/">WebCampus</a>.</p>
+<p>I have provided PDF copies of all chapters of the course textbook (A
+Primer of Ecology, by Nick Gotelli) on WebCampus. However, I encourage
+you to pick up a copy of the textbook- you can purchase the textbook new
+or used on <a
+href="https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1484867155&amp;sr=1-1&amp;keywords=a+primer+of+ecology">Amazon</a>.
+Previous editions (especially 3rd edition) are acceptable as well. All
+other readings will be posted on <a
+href="https://unr.instructure.com/">WebCampus</a>.</p>
 </div>
 <div id="software" class="section level2">
 <h2>Software</h2>
-<p>Skills with specialized software and computer programming are critical in modern-day conservation biology and wildlife management. In this class, you will gain familiarity with computer programming and model building in <a href="https://insightmaker.com/">InsightMaker</a>, <a href="https://cran.r-project.org/">R</a>, and Excel. I hope by the end of this class you will understand how powerful and useful these tools can be – and not just for population ecology!</p>
-<p>See the <a href="Links.html">links page</a> for some useful references (I will post more links shortly, including some R tutorials!).</p>
+<p>Skills with specialized software and computer programming are
+critical in modern-day conservation biology and wildlife management. In
+this class, you will gain familiarity with computer programming and
+model building in <a href="https://insightmaker.com/">InsightMaker</a>,
+<a href="https://cran.r-project.org/">R</a>, and spreadsheet software
+(e.g., Excel, GSheets). I hope by the end of this class you will
+understand how powerful and useful these tools can be – and not just for
+population ecology!</p>
+<p>See the <a href="Links.html">links page</a> for some useful
+references (I will post more links shortly, including some R
+tutorials!).</p>
 </div>
 <div id="in-class-activities" class="section level2">
 <h2>In-class activities</h2>
-<p>This semester I will provide lecture materials, videos and readings prior to our class meetings. Most class periods will be devoted to discussion and hands-on modeling exercises (mini-labs) to give everyone a chance to apply the population ecology concepts from lectures and readings. Many class periods will also include short Top Hat questions (discussion questions, multiple choice, etc), mostly to give me feedback about what concepts might need more reinforcing. Your responses to these questions will also help inform your participation score. <em>NOTE: you will not be penalized for incorrect responses in TopHat</em>!</p>
+<p>This semester I will provide lecture materials, videos and readings
+prior to our class meetings. Most class periods will be devoted to
+discussion and hands-on modeling exercises (mini-labs) to give everyone
+a chance to apply the population ecology concepts from lectures and
+readings. Many class periods will also include short PointSolutions
+questions (discussion questions, multiple choice, etc), mostly to give
+me feedback about what concepts might need more reinforcing. Your
+responses to these questions will also help inform your participation
+score. <em>NOTE: you will not be penalized for incorrect responses in
+PointSolutions</em>!</p>
 </div>
 <div id="out-of-class-activities" class="section level2">
 <h2>Out-of-class activities</h2>
-<p>To make the most of this course, you will need to devote significant time outside of class on:</p>
+<p>To make the most of this course, you will need to devote significant
+time outside of class on:</p>
 <ol style="list-style-type: decimal">
-<li>Studying assigned readings (see <a href="schedule.html">the schedule</a>) and online lecture materials<br />
+<li>Studying assigned readings (see <a href="schedule.html">the
+schedule</a>) and online lecture materials (this website)<br />
 </li>
-<li>Finishing any problems/exercises you didn’t complete during class or lab<br />
+<li>Finishing any problems/exercises you didn’t complete during class or
+lab<br />
 </li>
 <li>Working on your final group projects.</li>
 </ol>
 </div>
 <div id="final-projects" class="section level2">
 <h2>Final projects</h2>
-<p>It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to assess conservation or management actions for a species of conservation concern (species of your choice!). Start thinking about what species you might be interested in modeling, and what conservation and management strategies you might want to test!</p>
+<p>It is never too early to start thinking about final project ideas and
+datasets. For the final projects, you will work in small groups to
+perform a population viability analysis (PVA) to assess conservation or
+management actions for a species of conservation concern (species of
+your choice!). Start thinking about what species you might be interested
+in modeling, and what conservation and management strategies you might
+want to test!</p>
 </div>
 <div id="making-up-classes-and-labs" class="section level2">
 <h2>Making up classes and labs</h2>
-<p>Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. BUT, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to be a full participant in this class. Please let me know in advance if you need to miss class for any reason.</p>
+<p>Lectures and laboratory exercises will be posted online in enough
+detail to complete and study on your own time. BUT, much of the benefit
+of this course will come from interactions with peers and the instructor
+during class and lab periods and I expect you to be a full participant
+in this class. Please let me know in advance if you need to miss class
+for any reason.</p>
 </div>
 <div id="please-help-to-make-this-class-better" class="section level2">
 <h2>Please help to make this class better!</h2>
-<p>I need your frequent and honest feedback in order to make sure that the level and pace are appropriate! Please don’t hesitate to provide constructive suggestions for improving this class!</p>
+<p>I need your frequent and honest feedback in order to make sure that
+the level and pace are appropriate! Please don’t hesitate to provide
+constructive suggestions for improving this class!</p>
 </div>
 <div id="introductions" class="section level2">
 <h2>Introductions</h2>
-<p>Please take the time to introduce yourself in more detail on WebCampus – I posted a question on the discussion board.</p>
+<p>Please take the time to introduce yourself in more detail on
+WebCampus – I posted a question on the discussion board.</p>
 </div>
 <div id="any-questions" class="section level2">
 <h2>Any questions??</h2>
