--- a/schedule.html
+++ b/schedule.html
@@ -12,9 +12,9 @@
 <meta name="author" content="NRES 470/670" />
 
 
-<title>Schedule, Spring 2022</title>
+<title>Schedule, Spring 2023</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -61,6 +61,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -81,6 +82,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -233,7 +237,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -249,7 +253,7 @@ $(document).ready(function () {
   <a href="schedule.html">Schedule</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Lectures
      
     <span class="caret"></span>
@@ -324,7 +328,7 @@ $(document).ready(function () {
   </ul>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Labs
      
     <span class="caret"></span>
@@ -374,19 +378,20 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Schedule, Spring 2022</h1>
+<h1 class="title toc-ignore">Schedule, Spring 2023</h1>
 <h4 class="author">NRES 470/670</h4>
 
 </div>
 
 
 <p>Please check for updates frequently!</p>
-<table style="width:100%;">
+<table>
 <colgroup>
+<col width="3%" />
 <col width="4%" />
-<col width="5%" />
-<col width="61%" />
-<col width="27%" />
+<col width="49%" />
+<col width="21%" />
+<col width="20%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -394,302 +399,387 @@ $(document).ready(function () {
 <th align="left">Dates</th>
 <th align="left">Topic</th>
 <th align="left">Readings</th>
+<th align="left">Due</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">Week 1</td>
-<td align="left">1/17/2022</td>
-<td align="left">NO CLASS (MLK day)</td>
+<td align="left">1/23/2023</td>
+<td align="left">LECTURE: <a href="INTRO.html">Course overview</a>; <a
+href="LECTURE1.html">Intro to Systems Thinking</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1/19/2022</td>
-<td align="left">LECTURE: Course overview; Intro to Systems Thinking</td>
-<td align="left">BCTD Chapter 1 (optional)</td>
+<td align="left">1/25/2023</td>
+<td align="left">LECTURE: <a href="LECTURE2.html">Intro to Population
+Ecology; Exponential growth</a></td>
+<td align="left">Gotelli Chapter 1</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1/21/2022</td>
-<td align="left">LAB 1: Introduction to population modeling in Excel, InsightMaker, and R</td>
+<td align="left">1/27/2023</td>
+<td align="left">LAB 1: <a href="LAB1.html">Introduction to population
+modeling in Excel, InsightMaker, and R</a></td>
 <td align="left">Gotelli Chapter 1</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 2</td>
-<td align="left">1/24/2022</td>
-<td align="left">LECTURE: Intro to Population Ecology; Exponential growth</td>
-<td align="left">Gotelli Chapter 1</td>
+<td align="left">1/30/2023</td>
+<td align="left">LECTURE: <a href="LECTURE3.html">Malthus and
+exponential growth</a></td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">1/26/2022</td>
-<td align="left">LECTURE: Malthus and exponential growth</td>
+<td align="left">2/1/2023</td>
+<td align="left">LECTURE: <a href="LECTURE4.html">Density-dependent
+population growth</a></td>
+<td align="left">Gotelli Chapter 2</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">1/28/2022</td>
-<td align="left">LAB 1 (cont’d)</td>
+<td align="left">2/3/2023</td>
+<td align="left"><a href="LAB1.html">LAB 1 (cont’d)</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 3</td>
-<td align="left">1/31/2022</td>
-<td align="left">LECTURE: Density-dependent growth</td>
+<td align="left">2/6/2023</td>
+<td align="left">LECTURE: <a href="LECTURE4.html">Density-dependent
+population growth</a></td>
 <td align="left">Gotelli Chapter 2</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/2/2022</td>
-<td align="left">LECTURE: Density-dependent growth</td>
-<td align="left">Gotelli Chapter 2</td>
+<td align="left">2/8/2023</td>
+<td align="left">LECTURE: <a href="LECTURE5.html">Passenger pigeon/Allee
+Effect</a></td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/4/2022</td>
-<td align="left">LAB 2: Density-dependent populations in InsightMaker; maximum sustainable yield (MSY) and more (lab 1 due)</td>
+<td align="left">2/10/2023</td>
+<td align="left">LAB 2: <a href="LAB2.html">Density-dependent
+populations in InsightMaker; MSY</a></td>
 <td align="left"></td>
+<td align="left">Lab 1</td>
 </tr>
 <tr class="even">
 <td align="left">Week 4</td>
-<td align="left">2/7/2022</td>
-<td align="left">LECTURE: Passenger pigeon/Allee Effect</td>
+<td align="left">2/13/2023</td>
+<td align="left">LECTURE: <a href="LECTURE6.html">Age-structured
+populations</a></td>
+<td align="left">Gotelli Chapter 3</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/9/2022</td>
-<td align="left">LECTURE: Age-structured populations (instructor away)</td>
+<td align="left">2/15/2023</td>
+<td align="left">LECTURE: <a href="LECTURE6.html">Age-structured
+populations</a></td>
 <td align="left">Gotelli Chapter 3</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/11/2022</td>
-<td align="left">LAB 3: Age-structured populations in Excel and InsightMaker (lab 2 due)</td>
+<td align="left">2/17/2023</td>
+<td align="left">LAB 3: <a href="LAB3.html">Age-structured populations
+in Excel and InsightMaker</a></td>
 <td align="left"></td>
+<td align="left">Lab 2</td>
 </tr>
 <tr class="odd">
 <td align="left">Week 5</td>
-<td align="left">2/14/2022</td>
-<td align="left">LECTURE: Age-structured populations</td>
+<td align="left">2/20/2023</td>
+<td align="left">President’s Day (no class)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/16/2022</td>
-<td align="left">LECTURE: Matrix population models (get in project groups)</td>
-<td align="left"><a href="heppell1.pdf">Heppell 1998</a></td>
+<td align="left">2/22/2023</td>
+<td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
+models</a></td>
+<td align="left">Gotelli Chapter 3</td>
+<td align="left"><a href="FINAL_PROJECTS.html">Get in project
+groups</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/18/2022</td>
-<td align="left">LAB 4: Matrix population models in R and InsightMaker (lab 3 due)</td>
+<td align="left">2/24/2023</td>
+<td align="left">LAB 4: <a href="LAB4.html">Matrix population models in
+R and InsightMaker</a></td>
 <td align="left"></td>
+<td align="left">Lab 3</td>
 </tr>
 <tr class="even">
 <td align="left">Week 6</td>
-<td align="left">2/21/2022</td>
-<td align="left">NO CLASS: President’s Day</td>
+<td align="left">2/27/2023</td>
+<td align="left">LECTURE: <a href="LECTURE7.html">Matrix population
+models</a></td>
+<td align="left"><a href="heppell1.pdf">Heppell 1998</a></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">2/23/2022</td>
-<td align="left">LECTURE: Matrix population models</td>
+<td align="left">3/1/2023</td>
+<td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
+uncertainty</a></td>
+<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">2/25/2022</td>
-<td align="left">Work in final project groups: PVA proposals</td>
+<td align="left">3/3/2023</td>
+<td align="left"><a href="FINAL_PROJECTS.html">Work in final project
+groups: PVA proposals</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 7</td>
-<td align="left">2/28/2022</td>
-<td align="left">LECTURE: Stochasticity and uncertainty</td>
-<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
+<td align="left">3/6/2023</td>
+<td align="left">LECTURE: <a href="LECTURE8.html">Stochasticity and
+uncertainty</a></td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/2/2022</td>
-<td align="left">LECTURE: Stochasticity and uncertainty</td>
+<td align="left">3/8/2023</td>
+<td align="left">TBD</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/4/2022</td>
-<td align="left">LAB 5: Stochasticity and uncertainty (lab 4 due) (group assignment: PVA proposals due)</td>
+<td align="left">3/10/2023</td>
+<td align="left">LAB 5: <a href="LAB5.html">Stochasticity and
+uncertainty</a></td>
 <td align="left"></td>
+<td align="left">PVA proposals, Lab 4</td>
 </tr>
 <tr class="even">
 <td align="left">Week 8</td>
-<td align="left">3/7/2022</td>
+<td align="left">3/13/2023</td>
 <td align="left">Review for Midterm #1</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/9/2022</td>
+<td align="left">3/15/2023</td>
 <td align="left">MIDTERM #1</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/11/2022</td>
-<td align="left">PVA projects: group meetings (or make alternate arrangements for a group meeting time)</td>
+<td align="left">3/17/2023</td>
+<td align="left"><a href="FINAL_PROJECTS.html">PVA projects</a>: group
+meetings (or make alternate arrangements for a group meeting time)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 9</td>
-<td align="left">3/14/2022</td>
-<td align="left">NO CLASS: spring break</td>
+<td align="left">3/20/2023</td>
+<td align="left">Spring Break (no class)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/16/2022</td>
-<td align="left">NO CLASS: spring break</td>
+<td align="left">3/22/2023</td>
+<td align="left">Spring Break (no class)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/18/2022</td>
-<td align="left">NO CLASS: spring break</td>
+<td align="left">3/24/2023</td>
+<td align="left">Spring Break (no class)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 10</td>
-<td align="left">3/21/2022</td>
-<td align="left">LECTURE: Small population paradigm</td>
+<td align="left">3/27/2023</td>
+<td align="left">LECTURE: <a href="LECTURE9.html">Small population
+paradigm</a></td>
 <td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">3/23/2022</td>
-<td align="left">LECTURE: Declining population paradigm</td>
+<td align="left">3/29/2023</td>
+<td align="left">LECTURE: <a href="LECTURE11.html">Declining population
+paradigm</a></td>
 <td align="left"><a href="caughley1.pdf">Caughley 1994</a></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/25/2022</td>
-<td align="left">Work on final projects (PVA models due apr 6) (lab 5 due)</td>
+<td align="left">3/31/2023</td>
+<td align="left">Work on final projects (PVA models due apr 6) (lab 5
+due)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 11</td>
-<td align="left">3/28/2022</td>
-<td align="left">LECTURE: Population Viability Analysis</td>
-<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
+<td align="left">4/3/2023</td>
+<td align="left">LECTURE: <a href="LECTURE12.html">Population Viability
+Analysis</a></td>
+<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal
+1998</a></td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">3/30/2022</td>
-<td align="left">LECTURE: Metapopulations</td>
+<td align="left">4/5/2023</td>
+<td align="left">LECTURE: <a
+href="LECTURE13.html">Metapopulations</a></td>
 <td align="left">Gotelli Chapter 4</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/1/2022</td>
-<td align="left">LAB 6: Metapopulation modeling in InsightMaker</td>
+<td align="left">4/7/2023</td>
+<td align="left">LAB 6: <a href="LAB6.html">Metapopulation modeling in
+InsightMaker</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 12</td>
-<td align="left">4/4/2022</td>
-<td align="left">LECTURE: Source-sink dynamics</td>
+<td align="left">4/10/2023</td>
+<td align="left">LECTURE: <a href="LECTURE13.html">Source-sink
+dynamics</a></td>
 <td align="left"><a href="griffin1.pdf">Griffin et al</a></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/6/2022</td>
-<td align="left">LECTURE: Parameter estimation (group assignment: PVA models due)</td>
+<td align="left">4/12/2023</td>
+<td align="left">LECTURE: <a href="LECTURE15.html">Parameter
+estimation</a></td>
 <td align="left"><a href="amstrup1.pdf">Amstrup et al Chapter 1</a></td>
+<td align="left">PVA models due</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/8/2022</td>
-<td align="left">PVA projects: group meetings (working model and description)</td>
+<td align="left">4/14/2023</td>
+<td align="left"><a href="FINAL_PROJECTS.html">PVA projects</a>: group
+meetings (working model and description)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 13</td>
-<td align="left">4/11/2022</td>
+<td align="left">4/17/2023</td>
 <td align="left">Review for Midterm #2</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/13/2022</td>
+<td align="left">4/19/2023</td>
 <td align="left">MIDTERM #2</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/15/2022</td>
-<td align="left">LAB 7 (optional): Parameter estimation: mark-recapture data (lab 6 due)</td>
+<td align="left">4/21/2023</td>
+<td align="left">LAB 7: <a href="LAB7.html">Parameter estimation:
+mark-recapture data</a></td>
 <td align="left"></td>
+<td align="left">Lab 6</td>
 </tr>
 <tr class="even">
 <td align="left">Week 14</td>
-<td align="left">4/18/2022</td>
-<td align="left">LECTURE: Species interactions: competition (final project: complete drafts due)</td>
+<td align="left">4/24/2023</td>
+<td align="left">LECTURE: <a href="LECTURE16.html">Species interactions:
+competition</a></td>
 <td align="left">Gotelli Chapter 5</td>
+<td align="left">Complete PVA drafts</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/20/2022</td>
-<td align="left">LECTURE: Species interactions: competition</td>
+<td align="left">4/26/2023</td>
+<td align="left">LECTURE: <a href="LECTURE16.html">Species interactions:
+competition</a></td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/22/2022</td>
-<td align="left">LAB: Final Project Peer Review (submit peer review)</td>
+<td align="left">4/28/2023</td>
+<td align="left">LAB: Final Project Peer Review (submit peer
+review)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 15</td>
-<td align="left">4/25/2022</td>
-<td align="left">LECTURE: Species interactions: predator-prey</td>
+<td align="left">5/1/2023</td>
+<td align="left">LECTURE: <a href="LECTURE17.html">Species interactions:
+predator-prey</a></td>
 <td align="left">Gotelli Chapter 6</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">4/27/2022</td>
+<td align="left">5/3/2023</td>
 <td align="left">LECTURE: STUDENT PRESENTATIONS</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">4/29/2022</td>
+<td align="left">5/5/2023</td>
 <td align="left">LAB: STUDENT PRESENTATIONS</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 16</td>
-<td align="left">5/2/2022</td>
+<td align="left">5/8/2023</td>
 <td align="left">LECTURE: Final Class Review</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">5/4/2022</td>
+<td align="left">5/10/2023</td>
 <td align="left">NO CLASS: Prep Day</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">5/6/2022</td>
+<td align="left">5/12/2023</td>
 <td align="left">FINAL EXAM (9:50 to 11:50am)</td>
+<td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 17</td>
-<td align="left">5/11/2022</td>
+<td align="left">5/15/2023</td>
 <td align="left">FINAL PAPERS DUE (last day of finals)</td>
 <td align="left"></td>
+<td align="left">Final PVA write-up</td>
 </tr>
 </tbody>
 </table>
